src/test/compile-fail/use-after-move.rs
// error-pattern: Unsatisfied precondition constraint (for example, init(x
fn main() {
  auto x = @5;
  auto y <- x;
  log *x;
}